Adding support for --limit-modules, --module-path and similar options.